--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <ul>
                     <li>1.5 - <abbr title="Bolo de copo">Cupcake</abbr></li>
                     <li>1.6 - <abbr title="Rosquinha">Donut</abbr></li>
-                    <li>3.0 - <abbr title="Bomba"> Eclair</abbr></li>
+                    <li>2.0 - <abbr title="Bomba"> Eclair</abbr></li>
                     <li>2.2 - <abbr title="Iorgute Congelado">Froyo</abbr></li>
                     <li>2.3 - <abbr title="Biscoito de Gengibre">Gingerbread</abbr></li>
                     <li>3.0 - <abbr title="Favo de Mel">Honeycomb</abbr></li>
@@ -85,7 +85,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/gustavoguanabara" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo</a>.</p>
+        <p>Site criado por <a href="https://github.com/pauloanjo" target="_blank">Paulo Anjos</a> para o <a href="https://www.youtube.com/" target="_blank">YouTube</a>.</p>
     </footer>
 
 </body>
